feat: added filecontroller for uploading files, added placeholder application.properties for the db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,13 @@ spring.security.oauth2.client.registration.cognito.redirect-uri=https://d84l1y8p
 
 spring.security.oauth2.client.provider.cognito.issuer-uri=https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_RuUXlTvU3
 spring.security.oauth2.client.provider.cognito.user-name-attribute=username
+# database setup
+spring.datasource.url=jdbc:postgresql://<<your-db-url>>:5432/spc
+spring.datasource.username=username
+spring.datasource.password=password
+
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
