--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,41 @@
+## Spring Security OAuth2 Client Configuration
+#spring.security.oauth2.client.registration.cognito.client-id=5hk3hiq09hc9mgdfbbnb1u6t28
+#spring.security.oauth2.client.registration.cognito.client-secret=${aws_client_secret}
+#spring.security.oauth2.client.registration.cognito.scope=email,openid,phone
+#spring.security.oauth2.client.registration.cognito.redirect-uri=https://d84l1y8p4kdic.cloudfront.net
+#
+#spring.security.oauth2.client.provider.cognito.issuer-uri=https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_RuUXlTvU3
+#spring.security.oauth2.client.provider.cognito.user-name-attribute=username
+## database setup
+#spring.datasource.url=jdbc:postgresql://<<your-db-url>>:5432/spc
+#spring.datasource.username=username
+#spring.datasource.password=password
+#
+## Hibernate properties
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+#TODO local development, delete
 # Spring Security OAuth2 Client Configuration
 spring.security.oauth2.client.registration.cognito.client-id=5hk3hiq09hc9mgdfbbnb1u6t28
 spring.security.oauth2.client.registration.cognito.client-secret=${aws_client_secret}
 spring.security.oauth2.client.registration.cognito.scope=email,openid,phone
-spring.security.oauth2.client.registration.cognito.redirect-uri=https://d84l1y8p4kdic.cloudfront.net
-
+spring.security.oauth2.client.registration.cognito.redirect-uri=https://d84l1y8p4kdic.cloudfront.net/login/oauth2/code/cognito
 spring.security.oauth2.client.provider.cognito.issuer-uri=https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_RuUXlTvU3
 spring.security.oauth2.client.provider.cognito.user-name-attribute=username
+
+logging.level.org.springframework.security=DEBUG
+# aws
+aws.region=eu-north-1
+aws.s3.bucket=user-file-bucket
+aws.s3.accessKey=dummy
+aws.s3.secretKey=dummy
+aws.s3.endpoint=http://127.0.0.1:4566
 # database setup
-spring.datasource.url=jdbc:postgresql://<<your-db-url>>:5432/spc
-spring.datasource.username=username
+spring.datasource.url=jdbc:postgresql://localhost:5432/spc
+spring.datasource.username=postgres
 spring.datasource.password=password
 
 # Hibernate properties
