feat: list all user files, download files, hardcoded user, files preview

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-#TODO local development, delete
+#TODO local development, change some values
 # Spring Security OAuth2 Client Configuration
 spring.security.oauth2.client.registration.cognito.client-id=5hk3hiq09hc9mgdfbbnb1u6t28
 spring.security.oauth2.client.registration.cognito.client-secret=${aws_client_secret}
@@ -35,7 +35,7 @@ aws.s3.secretKey=dummy
 aws.s3.endpoint=http://127.0.0.1:4566
 # database setup
 spring.datasource.url=jdbc:postgresql://localhost:5432/spc
-spring.datasource.username=postgres
+spring.datasource.username=spc
 spring.datasource.password=password
 
 # Hibernate properties
