--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,13 @@
 			<artifactId>s3</artifactId>
 			<version>2.29.35</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.6.0</version>
+		</dependency>
 	</dependencies>
+
 
 	<build>
 		<plugins>
