feat: Logging of file Uploads, Downloads and User Login Success implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,12 +27,22 @@ spring.security.oauth2.client.provider.cognito.issuer-uri=https://cognito-idp.eu
 spring.security.oauth2.client.provider.cognito.user-name-attribute=username
 
 logging.level.org.springframework.security=DEBUG
+
 # aws
 aws.region=eu-north-1
 aws.s3.bucket=user-file-bucket
 aws.s3.accessKey=dummy
 aws.s3.secretKey=dummy
 aws.s3.endpoint=http://127.0.0.1:4566
+
+aws.cloudwatch.logs.region=us-east-1
+aws.cloudwatch.logs.endpoint=http://localhost:4566
+aws.cloudwatch.logs.accessKey=dummy
+aws.cloudwatch.logs.secretKey=dummy
+aws.cloudwatch.logs.groupName=my-log-group
+aws.cloudwatch.logs.streamName=my-log-stream
+
+
 # database setup
 spring.datasource.url=jdbc:postgresql://localhost:5432/spc
 spring.datasource.username=spc
