--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,12 @@
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-#TODO local development, change some values
 # Spring Security OAuth2 Client Configuration
-spring.security.oauth2.client.registration.cognito.client-id=5hk3hiq09hc9mgdfbbnb1u6t28
-spring.security.oauth2.client.registration.cognito.client-secret=${aws_client_secret}
-spring.security.oauth2.client.registration.cognito.scope=email,openid,phone
-spring.security.oauth2.client.registration.cognito.redirect-uri=https://d84l1y8p4kdic.cloudfront.net/login/oauth2/code/cognito
-spring.security.oauth2.client.provider.cognito.issuer-uri=https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_RuUXlTvU3
+spring.security.oauth2.client.registration.cognito.client-id=528jj5ipkb6iu1dg5vsv9p4l2r
+spring.security.oauth2.client.registration.cognito.client-secret=dupa
+spring.security.oauth2.client.registration.cognito.scope=phone,openid,email
+spring.security.oauth2.client.registration.cognito.redirect-uri=http://localhost:8080/files
+spring.security.oauth2.client.provider.cognito.issuerUri=https://cognito-idp.eu-north-1.amazonaws.com/eu-north-1_uRVljTSiY
 spring.security.oauth2.client.provider.cognito.user-name-attribute=username
 
 logging.level.org.springframework.security=DEBUG
@@ -42,7 +41,6 @@ aws.cloudwatch.logs.secretKey=dummy
 aws.cloudwatch.logs.groupName=my-log-group
 aws.cloudwatch.logs.streamName=my-log-stream
 
-
 # database setup
 spring.datasource.url=jdbc:postgresql://localhost:5432/spc
 spring.datasource.username=spc
@@ -53,3 +51,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#logs
+logging.level.spc.cloud=info
